--- a/contact.css
+++ b/contact.css
@@ -7,3 +7,18 @@ body {
     background-image: url(./img/leonfight1.JPG);
     background-size: cover;
 }
+
+#Contact {
+    text-align: center;
+}
+
+#Contact form {
+    display: inline-block;
+}
+
+input {
+    display: block;
+    margin-bottom: 15px;
+    padding: 10px;
+    border-radius: 10px;
+}
