--- a/aboutme.css
+++ b/aboutme.css
@@ -39,9 +39,15 @@
     border: 2px #000000 solid;
   }
 
-  #backhome {
-    text-align: center;
-    border: 1mm;
-    border-radius: 10px;
+  button {
+    display: block;
+    margin-bottom: 15px;
     padding: 10px;
+    border-radius: 10px;
+  }
+
+  #backhome {
+    margin-bottom: 15px;
+    margin-top: 25px;
+    display: inline-block;
   }
