--- a/logout.css
+++ b/logout.css
@@ -4,7 +4,7 @@ h1 {
 }
 
 body {
-    background-image: url(./img/leonfight1.JPG);
+    background-image: url(./img/leonfight12.jpg);
     background-size: cover;
 }
 
