--- a/aboutme.css
+++ b/aboutme.css
@@ -49,5 +49,6 @@
   #backhome {
     margin-bottom: 15px;
     margin-top: 25px;
-    display: inline-block;
+    display: grid;
+    place-items: center
   }
