--- a/main.css
+++ b/main.css
@@ -78,7 +78,7 @@ section img {
 }
 
 #traditions-mt ol {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:'Arial, Helvetica, sans-serif'
 }
 
 #traditions-mt img:hover {
